100-percent-capture-fresh.log
C:\Users\DELL\AppData\Roaming\nvm\v24.11.1\node_modules\ts-node\src\index.ts:859
    return new TSError(diagnosticText, diagnosticCodes, diagnostics);
           ^
TSError: ⨯ Unable to compile TypeScript:
capture-all-apps-100percent.ts(57,14): error TS7006: Parameter 'message' implicitly has an 'any' type.
capture-all-apps-100percent.ts(58,18): error TS7053: Element implicitly has an 'any' type because expression of type 'string' can't be used to index type '{ reset: string; bright: string; green: string; yellow: string; red: string; cyan: string; blue: string; magenta: string; }'.
  No index signature with a parameter of type 'string' was found on type '{ reset: string; bright: string; green: string; yellow: string; red: string; cyan: string; blue: string; magenta: string; }'.
capture-all-apps-100percent.ts(105,3): error TS2322: Type 'any[]' is not assignable to type 'never[]'.
  Type 'any' is not assignable to type 'never'.
capture-all-apps-100percent.ts(114,25): error TS7006: Parameter 'project' implicitly has an 'any' type.
capture-all-apps-100percent.ts(162,35): error TS7006: Parameter 'project' implicitly has an 'any' type.
capture-all-apps-100percent.ts(174,38): error TS7006: Parameter 'data' implicitly has an 'any' type.
capture-all-apps-100percent.ts(181,38): error TS7006: Parameter 'data' implicitly has an 'any' type.
capture-all-apps-100percent.ts(203,34): error TS7006: Parameter 'project' implicitly has an 'any' type.
capture-all-apps-100percent.ts(203,43): error TS7006: Parameter 'page' implicitly has an 'any' type.
capture-all-apps-100percent.ts(229,43): error TS18046: 'err' is of type 'unknown'.
capture-all-apps-100percent.ts(236,27): error TS7006: Parameter 'project' implicitly has an 'any' type.
capture-all-apps-100percent.ts(236,36): error TS7006: Parameter 'page' implicitly has an 'any' type.
capture-all-apps-100percent.ts(236,42): error TS7006: Parameter 'index' implicitly has an 'any' type.
capture-all-apps-100percent.ts(236,49): error TS7006: Parameter 'total' implicitly has an 'any' type.
capture-all-apps-100percent.ts(246,30): error TS2345: Argument of type 'any' is not assignable to parameter of type 'never'.
capture-all-apps-100percent.ts(280,30): error TS2345: Argument of type 'any' is not assignable to parameter of type 'never'.
capture-all-apps-100percent.ts(285,7): error TS18046: 'serverProcess' is of type 'unknown'.
capture-all-apps-100percent.ts(289,24): error TS18046: 'error' is of type 'unknown'.
capture-all-apps-100percent.ts(291,27): error TS2345: Argument of type '{ name: any; error: any; }' is not assignable to parameter of type 'never'.
capture-all-apps-100percent.ts(293,14): error TS18046: 'error' is of type 'unknown'.
capture-all-apps-100percent.ts(329,22): error TS2339: Property 'name' does not exist on type 'never'.
capture-all-apps-100percent.ts(329,34): error TS2339: Property 'error' does not exist on type 'never'.
capture-all-apps-100percent.ts(397,29): error TS18046: 'error' is of type 'unknown'.

    at createTSError (C:\Users\DELL\AppData\Roaming\nvm\v24.11.1\node_modules\ts-node\src\index.ts:859:12)
    at reportTSError (C:\Users\DELL\AppData\Roaming\nvm\v24.11.1\node_modules\ts-node\src\index.ts:863:19)
    at getOutput (C:\Users\DELL\AppData\Roaming\nvm\v24.11.1\node_modules\ts-node\src\index.ts:1077:36)
    at Object.compile (C:\Users\DELL\AppData\Roaming\nvm\v24.11.1\node_modules\ts-node\src\index.ts:1433:41)
    at Module.m._compile (C:\Users\DELL\AppData\Roaming\nvm\v24.11.1\node_modules\ts-node\src\index.ts:1617:30)
    at node:internal/modules/cjs/loader:1893:10
    at Object.require.extensions.<computed> [as .ts] (C:\Users\DELL\AppData\Roaming\nvm\v24.11.1\node_modules\ts-node\src\index.ts:1621:12)
    at Module.load (node:internal/modules/cjs/loader:1481:32)
    at Module._load (node:internal/modules/cjs/loader:1300:12)
    at TracingChannel.traceSync (node:diagnostics_channel:328:14) {
  diagnosticCodes: [
     7006,  7053,  2322,  7006,
     7006,  7006,  7006,  7006,
     7006, 18046,  7006,  7006,
     7006,  7006,  2345,  2345,
    18046, 18046,  2345, 18046,
     2339,  2339, 18046
  ]
}
